Added enviroment variables and Updated Contact Route

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -8,7 +8,7 @@
 <div class="social-buttons">
    <a href="https://www.instagram.com/shivanshsingh4378/" class="btn btn-instagram">Instagram</a>
    <a href="https://twitter.com/your_username" class="btn btn-twitter">Twitter</a>
-   <a href="https://www.linkedin.com/in/your_username/" class="btn btn-linkedin">LinkedIn</a>
+   <a href="https://www.linkedin.com/in/shivansh-singh-736521289/" class="btn btn-linkedin">LinkedIn</a>
 </div>
   <style>
    .btn {
